parser/src/snapshots/rustpython_parser__function__tests__function_kw_only_args_with_defaults.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..29,
                name: Identifier(
                    "f",
                ),
                args: Arguments {
                    range: 5..23,
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [
                        ArgWithDefault {
                            range: 9..10,
                            def: Arg {
                                range: 9..10,
                                arg: Identifier(
                                    "a",
                                ),
                                annotation: None,
                                type_comment: None,
                            },
                            default: None,
                        },
                        ArgWithDefault {
                            range: 12..13,
                            def: Arg {
                                range: 12..13,
                                arg: Identifier(
                                    "b",
                                ),
                                annotation: None,
                                type_comment: None,
                            },
                            default: Some(
                                Constant(
                                    ExprConstant {
                                        range: 14..16,
                                        value: Int(
                                            20,
                                        ),
                                        kind: None,
                                    },
                                ),
                            ),
                        },
                        ArgWithDefault {
                            range: 18..19,
                            def: Arg {
                                range: 18..19,
                                arg: Identifier(
                                    "c",
                                ),
                                annotation: None,
                                type_comment: None,
                            },
                            default: Some(
                                Constant(
                                    ExprConstant {
                                        range: 20..22,
                                        value: Int(
                                            30,
                                        ),
                                        kind: None,
                                    },
                                ),
                            ),
                        },
                    ],
                    kwarg: None,
                },
                body: [
                    Pass(
                        StmtPass {
                            range: 25..29,
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                type_params: [],
            },
        ),
    ],
)
