parser/src/snapshots/rustpython_parser__function__tests__function_pos_and_kw_only_args_with_defaults_and_varargs.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..42,
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                args: Arguments {
                    range: 5..36,
                    posonlyargs: [],
                    args: [
                        ArgWithDefault {
                            range: 6..7,
                            def: Arg {
                                range: 6..7,
                                arg: Identifier {
                                    id: "a",
                                    range: 6..7,
                                },
                                annotation: None,
                                type_comment: None,
                            },
                            default: None,
                        },
                        ArgWithDefault {
                            range: 9..10,
                            def: Arg {
                                range: 9..10,
                                arg: Identifier {
                                    id: "b",
                                    range: 9..10,
                                },
                                annotation: None,
                                type_comment: None,
                            },
                            default: None,
                        },
                        ArgWithDefault {
                            range: 12..13,
                            def: Arg {
                                range: 12..13,
                                arg: Identifier {
                                    id: "c",
                                    range: 12..13,
                                },
                                annotation: None,
                                type_comment: None,
                            },
                            default: None,
                        },
                    ],
                    vararg: Some(
                        Arg {
                            range: 16..20,
                            arg: Identifier {
                                id: "args",
                                range: 16..20,
                            },
                            annotation: None,
                            type_comment: None,
                        },
                    ),
                    kwonlyargs: [
                        ArgWithDefault {
                            range: 22..23,
                            def: Arg {
                                range: 22..23,
                                arg: Identifier {
                                    id: "d",
                                    range: 22..23,
                                },
                                annotation: None,
                                type_comment: None,
                            },
                            default: None,
                        },
                        ArgWithDefault {
                            range: 25..26,
                            def: Arg {
                                range: 25..26,
                                arg: Identifier {
                                    id: "e",
                                    range: 25..26,
                                },
                                annotation: None,
                                type_comment: None,
                            },
                            default: Some(
                                Constant(
                                    ExprConstant {
                                        range: 27..29,
                                        value: Int(
                                            20,
                                        ),
                                        kind: None,
                                    },
                                ),
                            ),
                        },
                        ArgWithDefault {
                            range: 31..32,
                            def: Arg {
                                range: 31..32,
                                arg: Identifier {
                                    id: "f",
                                    range: 31..32,
                                },
                                annotation: None,
                                type_comment: None,
                            },
                            default: Some(
                                Constant(
                                    ExprConstant {
                                        range: 33..35,
                                        value: Int(
                                            30,
                                        ),
                                        kind: None,
                                    },
                                ),
                            ),
                        },
                    ],
                    kwarg: None,
                },
                body: [
                    Pass(
                        StmtPass {
                            range: 38..42,
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                type_params: [],
            },
        ),
    ],
)
