parser/src/snapshots/rustpython_parser__function__tests__function_pos_args.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        FunctionDef(
            StmtFunctionDef {
                range: 0..20,
                name: Identifier {
                    id: "f",
                    range: 4..5,
                },
                args: Arguments {
                    range: 5..14,
                    posonlyargs: [],
                    args: [
                        ArgWithDefault {
                            range: 6..7,
                            def: Arg {
                                range: 6..7,
                                arg: Identifier {
                                    id: "a",
                                    range: 6..7,
                                },
                                annotation: None,
                                type_comment: None,
                            },
                            default: None,
                        },
                        ArgWithDefault {
                            range: 9..10,
                            def: Arg {
                                range: 9..10,
                                arg: Identifier {
                                    id: "b",
                                    range: 9..10,
                                },
                                annotation: None,
                                type_comment: None,
                            },
                            default: None,
                        },
                        ArgWithDefault {
                            range: 12..13,
                            def: Arg {
                                range: 12..13,
                                arg: Identifier {
                                    id: "c",
                                    range: 12..13,
                                },
                                annotation: None,
                                type_comment: None,
                            },
                            default: None,
                        },
                    ],
                    vararg: None,
                    kwonlyargs: [],
                    kwarg: None,
                },
                body: Suite(
                    StmtSuite {
                        range: 16..20,
                        statements: [
                            Pass(
                                StmtPass {
                                    range: 16..20,
                                },
                            ),
                        ],
                    },
                ),
                decorator_list: [],
                returns: None,
                type_comment: None,
            },
        ),
    ],
)
